# fips-miniclib

./: CMakeLists.txt  fips.yml
miniclib/: CMakeLists.txt  DebugNew.h  Precompiled.h  miniclib.h
miniclib/Container/: Allocator.cpp  Allocator.h  ArrayPtr.h  ForEach.h  Hash.h  HashBase.cpp  HashBase.h  HashMap.h  HashSet.h  LinkedList.h  List.h  ListBase.h  Pair.h  Ptr.h  RefCounted.cpp  RefCounted.h  Sort.h  Str.cpp  Str.h  Swap.cpp  Swap.h  Vector.h  VectorBase.cpp  VectorBase.h
miniclib/Core/: Attribute.h  Condition.cpp  Condition.h  Context.cpp  Context.h  CoreEvents.h  EventProfiler.cpp  EventProfiler.h  Main.h  MiniDump.cpp  MiniDump.h  Mutex.cpp  Mutex.h  Object.cpp  Object.h  ProcessUtils.cpp  ProcessUtils.h  Profiler.cpp  Profiler.h  Spline.cpp  Spline.h  StringUtils.cpp  StringUtils.h  Thread.cpp  Thread.h  Timer.cpp  Timer.h  Variant.cpp  Variant.h  WorkQueue.cpp  WorkQueue.h
miniclib/IO/: Compression.cpp  Compression.h  Deserializer.cpp  Deserializer.h  File.cpp  File.h  FileSystem.cpp  FileSystem.h  FileWatcher.cpp  FileWatcher.h  IOEvents.h  Log.cpp  Log.h  MacFileWatcher.h  MacFileWatcher.m  MemoryBuffer.cpp  MemoryBuffer.h  NamedPipe.cpp  NamedPipe.h  PackageFile.cpp  PackageFile.h  RWOpsWrapper.h  Serializer.cpp  Serializer.h  VectorBuffer.cpp  VectorBuffer.h
miniclib/LZ4/: CMakeLists.txt
miniclib/Math/: AreaAllocator.cpp  AreaAllocator.h  BoundingBox.cpp  BoundingBox.h  Color.cpp  Color.h  Frustum.cpp  Frustum.h  MathDefs.cpp  MathDefs.h  Matrix2.cpp  Matrix2.h  Matrix3.cpp  Matrix3.h  Matrix3x4.cpp  Matrix3x4.h  Matrix4.cpp  Matrix4.h  Plane.cpp  Plane.h  Polyhedron.cpp  Polyhedron.h  Quaternion.cpp  Quaternion.h  Random.cpp  Random.h  Ray.cpp  Ray.h  Rect.cpp  Rect.h  Sphere.cpp  Sphere.h  StringHash.cpp  StringHash.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
